# textgen

./: CMakeLists.txt  README.md  TextGenerator.py  config.h.in  grammar.c  grammar.h  meteo.py  operators.c  operators.h  options.c  options.h  randfunc_ops.c  randfunc_ops.h  randfuncs.c  randfuncs.h  text.py  textgen.c  textgen.h
grammars/: users.json  weather.json
